--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
-bundler_args: "--without development"
-before_script:
-  - "cp config/database.yml.sample config/database.yml"
 rvm:
   - 2.0.0
   - 1.9.3
+bundler_args: "--without development"
+before_script:
+  - "cp config/database.yml.sample config/database.yml"
+  - psql -c 'create database v-man_test' -U postgres
+script:
+  - RAILS_ENV=test bundle exec rake --trace db:migrate
+  - bundle exec rake db:test:prepare
+  - bundle exec rspec spec/
