--- a/config/database.yml.sample
+++ b/config/database.yml.sample
@@ -2,22 +2,22 @@ development:
   adapter: postgresql
   database: v-man_development
   encoding: unicode
-  username: v-man_development
-  password: secret
+  username: postgres
+  password:
   pool: 5
 
 test:
   adapter: postgresql
   database: v-man_test
   encoding: unicode
-  username: v-man_test
-  password: secret
+  username: postgres
+  password:
   pool: 5
 
 production:
   adapter: postgresql
   database: v-man_production
   encoding: unicode
-  username: v-man_production
-  password: secret
+  username: postgres
+  password:
   pool: 5
