--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ rvm:
 bundler_args: "--without development"
 before_script:
   - "cp config/database.yml.sample config/database.yml"
-  - psql -c 'create database v-man_test' -U postgres
+  - psql -c 'create database "v-man_test";' -U postgres
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate
   - bundle exec rake db:test:prepare
