--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 rvm:
   - 2.0.0
   - 1.9.3
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libmagic-dev
 bundler_args: "--without development"
 before_script:
   - "cp config/database.yml.sample config/database.yml"
